--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Python==3.5.6
 Flask==0.10.1
 
 Flask-SQLAlchemy==2.0
@@ -24,11 +25,7 @@ gunicorn==19.3.0
 
 itsdangerous==0.24
 
-psycopg2==2.6.1
-
 ratelim==0.1.6
-
-equests==2.7.0
 
 six==1.9.0
 
